feat: Introduce new case, encounter, housing, and legal entities with corresponding repositories and controllers, while refactoring existing services and removing deprecated models and repositories.